# com.castsoftware.uc.arg

./: .gitignore  766A5600  Automation DD Findings for HL - Template v1.4.pptx  Effort.csv  README.md  actionPlan.py  aip.ipynb  aipRestCall.py  arg.bat  argConfig.py  assessment.ipynb  check_version.ps1  config.properties  config.py  convert.py  cwe-top25.csv  cwe-top25.xml  highlight.ipynb  hlRestCall.py  hlTech.ipynb  install.bat  license.ipynb  logger.py  powerpoint.py  requirements.txt  restAPI.py  restCall.py  rest_test.ipynb  stats.py  tags.md  tech.json  template.pptx  util.py  workspace.code-workspace
deck/: accela.pptx
src/: pyproject.toml  setup.py
src/cast_arg/: actionPlan.py  config.py  convert.py  main.py  powerpoint.py  restCall.py  stats.py
src/cast_arg/pages/: benchmark.py  greenIt.py  hl_benchmark.py  hl_cloud.py  hl_greenIt.py  hl_report.py  hl_summary.py  mri_grades.py  mri_overview.py  mri_report.py  mri_sizing.py  mri_strengh_improvement.py  mri_tech_detail_table.py  summary.py  tech_detail_table.py
